@@ -4,6 +4,7 @@ class MultiElementsPage
   divs(:the_divs, :class => 'div')
   buttons(:the_buttons, :class => 'button')
   text_fields(:the_text_fields, :class => 'textfield')
+  hidden_fields(:the_hidden_fields, :class => 'hiddenfield')
 end
 
 
@@ -418,5 +419,9 @@ end
 
 When /^I select the text fields using the generated method$/ do
   @elements = @page.the_text_fields_elements
+end
+
+When /^I select the hidden fields using the generated method$/ do
+  @elements = @page.the_hidden_fields_elements
 end
 
