@@ -4,6 +4,7 @@
     * divs
     * buttons
     * text_fields
+    * hidden_fields
   * Added ability to register and use custom elements based on standard elements (William Powell)
   * Added generated method to return text for a table
   * Added generated method to return text for an unordered list
